<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".ListarCliente">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarListClien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/txtBuscar"
        style="@android:style/Widget.Material.SearchView"
        android:layout_width="413dp"
        android:layout_height="50dp"
        android:background="@color/colorGray1"
        android:clickable="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="true"
        android:iconifiedByDefault="false"
        android:queryHint="@string/txtBuscarCliente"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="horizontal|vertical"
        android:showDividers="middle|beginning|end|none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarListClien">

    </SearchView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="235dp"
        android:layout_height="97dp"
        app:layout_constraintEnd_toStartOf="@+id/btnListar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBuscar">

        <RadioButton
            android:id="@+id/rdbActivado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/txtClienteAct"
            android:textColor="#171616" />

        <RadioButton
            android:id="@+id/rdbDesactivado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtClienteDesac"
            android:textColor="#171616" />

    </RadioGroup>

    <Button
        android:id="@+id/btnListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#2A90E1"
        android:text="@string/btnListar"
        android:textColor="#FFFFFF"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBuscar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaClienteCC"
        android:layout_width="wrap_content"
        android:layout_height="405dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorGray"
        android:clipChildren="true"
        android:clipToPadding="false"
        android:contextClickable="true"
        android:duplicateParentState="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListar">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>