<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:clipToPadding="false"
    android:elevation="20dp"
    app:cardBackgroundColor="#00BCD4"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/txtNombre"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/viewNombrePro"
                android:layout_width="292dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="5dp"
                android:text="@string/txtPRE"
                android:textColor="#FAFAFB"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPreciArticulo"
                android:layout_width="113dp"
                android:layout_height="38dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="#050505"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/TXTcANTIDAD"
                    android:textAlignment="center"
                    android:textColor="#FFFDFD" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtCantidadArt"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="#0B0B0B"
                    android:textSize="14sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btnAgregarPro"
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="#4CAF50"
                    android:minHeight="48dp"
                    android:text="Agregar"
                    android:textColor="#FFFEFE"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>